Fixed z-indexing and conflicts

--- a/css/app.css
+++ b/css/app.css
@@ -80,3 +80,7 @@
 .is-list div[class$="-Input"] {
   position: absolute !important;
 }
+
+.Select-menu-outer {
+  z-index: 9999 !important;
+}
